fix style issue on mobile

--- a/style.css
+++ b/style.css
@@ -166,6 +166,9 @@ a {
     left: 50%;
     transform: translate(-50%, -50%);
     width: 75%;
+}
+
+iframe.slideImg {
     height: 75%;
 }
 
